--- a/ladder-viewer.html
+++ b/ladder-viewer.html
@@ -1,30 +1,54 @@
-<div id="viewer" style="width: 100%; height: 500px;"></div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Ladder Viewer</title>
+  <style>
+    body { margin: 0; }
+    #viewer { width: 100vw; height: 100vh; display: block; }
+  </style>
+</head>
+<body>
+  <div id="viewer"></div>
 
-<script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/loaders/OBJLoader.js"></script>
+  <!-- THREE.js Core -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
+  <!-- OBJLoader must come AFTER Three.js -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/loaders/OBJLoader.js"></script>
 
-<script>
-  const scene = new THREE.Scene();
-  const camera = new THREE.PerspectiveCamera(75, window.innerWidth / 500, 0.1, 1000);
-  const renderer = new THREE.WebGLRenderer();
-  renderer.setSize(window.innerWidth, 500);
-  document.getElementById('viewer').appendChild(renderer.domElement);
+  <script>
+    // Init
+    const scene = new THREE.Scene();
+    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+    const renderer = new THREE.WebGLRenderer();
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    document.getElementById('viewer').appendChild(renderer.domElement);
 
-  const light = new THREE.AmbientLight(0xffffff, 1);
-  scene.add(light);
+    // Light
+    const light = new THREE.AmbientLight(0xffffff, 1.2);
+    scene.add(light);
 
-  const loader = new THREE.OBJLoader();
-  loader.load(
-    'https://cdn.jsdelivr.net/gh/eurostar-ecom/3DModel@main/ladder_model.obj',
-    function (object) {
-      object.scale.set(0.5, 0.5, 0.5); // Adjust as needed
-      scene.add(object);
-      camera.position.z = 5;
+    // Load .obj
+    const loader = new THREE.OBJLoader();
+    loader.load(
+      'https://cdn.jsdelivr.net/gh/eurostar-ecom/3DModel@main/ladder_model.obj',
+      function (object) {
+        object.scale.set(0.5, 0.5, 0.5);
+        scene.add(object);
+        camera.position.z = 5;
+        animate();
+      },
+      undefined,
+      function (error) {
+        console.error('Error loading model:', error);
+      }
+    );
+
+    // Render loop
+    function animate() {
+      requestAnimationFrame(animate);
       renderer.render(scene, camera);
-    },
-    undefined,
-    function (error) {
-      console.error('Error loading OBJ model:', error);
     }
-  );
-</script>
+  </script>
+</body>
+</html>
