--- a/ladder-viewer.html
+++ b/ladder-viewer.html
@@ -4,31 +4,28 @@
   <meta charset="UTF-8">
   <title>Ladder Viewer</title>
   <style>
-    body { margin: 0; }
+    body { margin: 0; background: #f0f0f0; }
     #viewer { width: 100vw; height: 100vh; display: block; }
   </style>
 </head>
 <body>
   <div id="viewer"></div>
 
-  <!-- THREE.js Core -->
+  <!-- Three.js Core -->
   <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
-  <!-- OBJLoader must come AFTER Three.js -->
+  <!-- OBJLoader (must load after three.min.js) -->
   <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/loaders/OBJLoader.js"></script>
 
   <script>
-    // Init
     const scene = new THREE.Scene();
     const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-    const renderer = new THREE.WebGLRenderer();
+    const renderer = new THREE.WebGLRenderer({ antialias: true });
     renderer.setSize(window.innerWidth, window.innerHeight);
     document.getElementById('viewer').appendChild(renderer.domElement);
 
-    // Light
-    const light = new THREE.AmbientLight(0xffffff, 1.2);
+    const light = new THREE.HemisphereLight(0xffffff, 0x444444, 1);
     scene.add(light);
 
-    // Load .obj
     const loader = new THREE.OBJLoader();
     loader.load(
       'https://cdn.jsdelivr.net/gh/eurostar-ecom/3DModel@main/ladder_model.obj',
@@ -40,15 +37,20 @@
       },
       undefined,
       function (error) {
-        console.error('Error loading model:', error);
+        console.error('Error loading OBJ:', error);
       }
     );
 
-    // Render loop
     function animate() {
       requestAnimationFrame(animate);
       renderer.render(scene, camera);
     }
+
+    window.addEventListener('resize', () => {
+      camera.aspect = window.innerWidth / window.innerHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize(window.innerWidth, window.innerHeight);
+    });
   </script>
 </body>
 </html>
