--- a/ladder-viewer.html
+++ b/ladder-viewer.html
@@ -5,28 +5,24 @@
   <title>Ladder Viewer</title>
   <style>
     body { margin: 0; background: #f0f0f0; }
-    #viewer { width: 100vw; height: 100vh; display: block; }
+    canvas { width: 100%; height: 100% }
   </style>
 </head>
 <body>
-  <div id="viewer"></div>
+  <script type="module">
+    import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.module.js';
+    import { OBJLoader } from 'https://cdn.jsdelivr.net/npm/three@0.152.2/examples/jsm/loaders/OBJLoader.js';
 
-  <!-- Three.js Core -->
-  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
-  <!-- OBJLoader (must load after three.min.js) -->
-  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/loaders/OBJLoader.js"></script>
-
-  <script>
     const scene = new THREE.Scene();
     const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
     const renderer = new THREE.WebGLRenderer({ antialias: true });
     renderer.setSize(window.innerWidth, window.innerHeight);
-    document.getElementById('viewer').appendChild(renderer.domElement);
+    document.body.appendChild(renderer.domElement);
 
-    const light = new THREE.HemisphereLight(0xffffff, 0x444444, 1);
+    const light = new THREE.HemisphereLight(0xffffff, 0x444444, 1.2);
     scene.add(light);
 
-    const loader = new THREE.OBJLoader();
+    const loader = new OBJLoader();
     loader.load(
       'https://cdn.jsdelivr.net/gh/eurostar-ecom/3DModel@main/ladder_model.obj',
       function (object) {
@@ -37,7 +33,7 @@
       },
       undefined,
       function (error) {
-        console.error('Error loading OBJ:', error);
+        console.error('OBJ load error:', error);
       }
     );
 
