--- a/ladder-viewer.html
+++ b/ladder-viewer.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Ladder Viewer</title>
+  <title>Ladder 3D Viewer</title>
   <style>
-    body { margin: 0; background: #f0f0f0; }
-    canvas { width: 100%; height: 100% }
+    body { margin: 0; overflow: hidden; }
+    canvas { display: block; }
   </style>
 </head>
 <body>
@@ -14,26 +14,29 @@
     import { OBJLoader } from 'https://cdn.jsdelivr.net/npm/three@0.152.2/examples/jsm/loaders/OBJLoader.js';
 
     const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+    scene.background = new THREE.Color(0xf0f0f0);
+
+    const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+    camera.position.z = 5;
+
     const renderer = new THREE.WebGLRenderer({ antialias: true });
     renderer.setSize(window.innerWidth, window.innerHeight);
     document.body.appendChild(renderer.domElement);
 
-    const light = new THREE.HemisphereLight(0xffffff, 0x444444, 1.2);
+    const light = new THREE.AmbientLight(0xffffff, 1.2);
     scene.add(light);
 
     const loader = new OBJLoader();
     loader.load(
       'https://cdn.jsdelivr.net/gh/eurostar-ecom/3DModel@main/ladder_model.obj',
-      function (object) {
-        object.scale.set(0.5, 0.5, 0.5);
-        scene.add(object);
-        camera.position.z = 5;
+      function (obj) {
+        obj.scale.set(0.5, 0.5, 0.5);
+        scene.add(obj);
         animate();
       },
       undefined,
       function (error) {
-        console.error('OBJ load error:', error);
+        console.error('Error loading OBJ file:', error);
       }
     );
 
