--- a/ladder-viewer.html
+++ b/ladder-viewer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Ladder 3D Viewer</title>
   <style>
     body { margin: 0; overflow: hidden; }
@@ -12,36 +12,46 @@
   <script type="module">
     import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.module.js';
     import { OBJLoader } from 'https://cdn.jsdelivr.net/npm/three@0.152.2/examples/jsm/loaders/OBJLoader.js';
+    import { OrbitControls } from 'https://cdn.jsdelivr.net/npm/three@0.152.2/examples/jsm/controls/OrbitControls.js';
 
     const scene = new THREE.Scene();
     scene.background = new THREE.Color(0xf0f0f0);
 
-    const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
-    camera.position.z = 5;
+    const camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 1000);
+    camera.position.set(0, 1.5, 5);
 
     const renderer = new THREE.WebGLRenderer({ antialias: true });
     renderer.setSize(window.innerWidth, window.innerHeight);
     document.body.appendChild(renderer.domElement);
 
-    const light = new THREE.AmbientLight(0xffffff, 1.2);
-    scene.add(light);
+    const controls = new OrbitControls(camera, renderer.domElement);
+    controls.enableDamping = true;
+    controls.dampingFactor = 0.05;
+    controls.enableZoom = true;
+
+    const light1 = new THREE.HemisphereLight(0xffffff, 0x444444, 1.2);
+    const light2 = new THREE.DirectionalLight(0xffffff, 0.8);
+    light2.position.set(1, 1, 1);
+    scene.add(light1, light2);
 
     const loader = new OBJLoader();
     loader.load(
       'https://cdn.jsdelivr.net/gh/eurostar-ecom/3DModel@main/ladder_model.obj',
       function (obj) {
         obj.scale.set(0.5, 0.5, 0.5);
+        obj.position.set(0, -1, 0);
         scene.add(obj);
         animate();
       },
       undefined,
       function (error) {
-        console.error('Error loading OBJ file:', error);
+        console.error('OBJ load error:', error);
       }
     );
 
     function animate() {
       requestAnimationFrame(animate);
+      controls.update();
       renderer.render(scene, camera);
     }
 
